[package]
name = "eapol_respond"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0" }
clap = { features = ["derive"], version = "4.2" }
hex = { version = "0.4" }
nix = { features = ["net", "socket"], path = "../nix", version = "0.26" }
